apps/kube/windmill/manifest/windmill-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: windmill-route
    namespace: windmill
spec:
    parentRefs:
        - name: kbve-gateway
          namespace: kbve
    hostnames:
        - windmill.kbve.com
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          timeouts:
              backendRequest: 3600s
          backendRefs:
              - name: windmill-gate
                port: 5678
